--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
-name: Template
+name: HoudiniParticles
 version: '${version}'
-main: com.redmagic.template.Template
+main: com.redmagic.houdini.HoudiniParticles
 api-version: '1.20'
